--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -58,6 +58,7 @@ set(msg_files
 	esc_report.msg
 	esc_status.msg
 	estimator_status.msg
+	estimator_status_flags.msg
 	follow_target.msg
 	geofence_result.msg
 	gps_dump.msg
